fix: scripts fix for proper work as a list of containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,48 @@
 version: '3'
 services:
-  zookeeper:
+  zookeeper-server:
     image: 'bitnami/zookeeper:latest'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
     networks:
       - test-kafka-net
 
-  kafka-1:
+  kafka-server-1:
+    depends_on:
+      - "zookeeper-server"
     image: 'bitnami/kafka:latest'
+    environment:
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,PLAINTEXT_HOST://:29092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server-1:9092,PLAINTEXT_HOST://kafka-server-1:29092
     networks:
       - test-kafka-net
 
-  kafka-2:
+  kafka-server-2:
+    depends_on:
+      - "zookeeper-server"
     image: 'bitnami/kafka:latest'
+    environment:
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9093,PLAINTEXT_HOST://:29093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server-2:9093,PLAINTEXT_HOST://kafka-server-2:29093
     networks:
       - test-kafka-net
 
   kafka-producer:
+    depends_on:
+      - "kafka-server-1"
+      - "kafka-server-2"
     build: .
     environment:
-      - KAFKA_HOST=kafka-1:29092
+      - KAFKA_HOST=kafka-server-1:29092
+      - KAFKA_TOPIC=test-kafka-topic
     networks:
       - test-kafka-net
 
