--- a/docker.conf
+++ b/docker.conf
@@ -39,3 +39,5 @@ docker run -it --rm \
 
 docker-compose up
 docker-compose build
+
+docker-compose down && docker-compose build --no-cache && docker-compose up
